# create-your-own-lang-with-rust

./: .gitignore  404.html  CNAME  Cargo.toml  README.md  clippy.toml  crash_course.html  glossary.html  highlight.css  index.html  intro.html  pixi.toml  print.html  resources.html  rustfmt.toml  searchindex.js  searchindex.json  testing.html  toc.html  toc.js  transition_1_to_2.html  transition_2_to_3.html  transition_3_to_4.html  whats_next.html
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  discussions-and-feedbacks.md  feature_request.md  question.md  questions--discussions-or-feedbacks.md
.github/workflows/: ci.yml  gh-pages.yml
01_calculator/: ast.html  ast_traversal.html  basic_llvm.html  calc_intro.html  debugging.html  exercise.html  grammar_lexer_parser.html  jit_intro.html  repl.html  vm.html
02_firstlang/: control_flow.html  exercises.html  fibonacci.html  functions.html  intro.html  recursion.html  repl.html  syntax.html  variables.html
03_secondlang/: annotations.html  codegen.html  exercises.html  inference.html  intro.html  ir.html  jit_fibonacci.html  optimizations.html  why_types.html
04_thirdlang/: classes_syntax.html  codegen_classes.html  constructors.html  exercises.html  intro.html  memory.html  methods.html  optimization.html  running.html  why_classes.html
book/: book.toml
book/src/: SUMMARY.md  crash_course.md  glossary.md  intro.md  resources.md  testing.md  transition_1_to_2.md  transition_2_to_3.md  transition_3_to_4.md  whats_next.md
book/src/01_calculator/: ast.md  ast_traversal.md  basic_llvm.md  calc_intro.md  debugging.md  exercise.md  grammar_lexer_parser.md  jit_intro.md  repl.md  vm.md
book/src/02_firstlang/: control_flow.md  exercises.md  fibonacci.md  functions.md  intro.md  (+4 more)
book/theme/: custom.css  highlight.css
calculator/: Cargo.toml  README.md
calculator/examples/llvm/: Cargo.toml
calculator/examples/llvm/src/: main.rs
calculator/src/: ast.rs  grammar.pest  lib.rs  main.rs  parser.rs
calculator/src/compiler/: interpreter.rs  jit.rs  mod.rs
calculator/src/compiler/vm/: bytecode.rs  mod.rs  opcode.rs  vm.rs
firstlang/: Cargo.toml  README.md
firstlang/examples/: basics.fl  factorial.fl  fibonacci.fl
firstlang/src/: ast.rs  grammar.pest  interpreter.rs  lib.rs  main.rs  parser.rs
firstlang/src/ast/: interpreter.rs  mod.rs  type_erasure.rs  type_inference.rs  typed.rs  untyped.rs  visitor.rs
firstlang/src/ir/: basic_block.rs  function.rs  mod.rs  program.rs  statement.rs  symbol.rs
firstlang/src/syntax/: grammar_typed.pest  grammar_untyped.pest  mod.rs  typed_parser.rs  untyped_parser.rs
firstlang/tests/: integration_tests.rs  test_untyped_parser.rs
html/: 404.html  crash_course.html  intro.html
html/01_calculator/: ast_traversal.html  basic_llvm.html
linkcheck/: cache.json
secondlang/: Cargo.toml  README.md
secondlang/examples/: basics.sl  factorial.sl  fibonacci.sl  inference.sl
secondlang/src/: ast.rs  codegen.rs  grammar.pest  lib.rs  main.rs  parser.rs  typeck.rs  types.rs  visitor.rs
secondlang/tests/: integration_tests.rs
theme/: custom.css  force-theme.js
thirdlang/: Cargo.toml  README.md
thirdlang/examples/: counter.tl  destructor.tl  linked_node.tl  point.tl
thirdlang/src/: ast.rs  codegen.rs  grammar.pest  lib.rs  main.rs  parser.rs  typeck.rs  types.rs  visitor.rs
thirdlang/tests/: integration_tests.rs
(+19 files in other folders)
