[package]
name = "calculator"
version = "0.1.0"
authors = ["Ehsan M. Kermani <ehsanmok@users.noreply.github.com>"]
edition = "2021"
rust-version = "1.70"
description = "A simple calculator language for learning compiler basics"

[dependencies]
pest = "2.7"
pest_derive = "2.7"
anyhow = "1.0"
rustyline = "12.0"
cfg-if = "1.0"
# Pin home to exact stable-compatible version (0.5.12 requires edition2024/nightly)
home = "=0.5.9"
# LLVM bindings - optional, requires nightly Rust
# Update feature to match your llvm-config --version
inkwell = { version = "0.7.1", features = ["llvm20-1"], optional = true }

[lib]
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"
test = false

[[bin]]
name = "repl"
test = false

[features]
default = ["interpreter"]
jit = ["inkwell"]
interpreter = []
vm = []
