[package]
name = "llvm"
version = "0.1.0"
authors = ["Ehsan M. Kermani <ehsanmok@users.noreply.github.com>"]
edition = "2021"
rust-version = "1.70"
description = "LLVM example for calculator"

[dependencies]
# LLVM bindings - requires nightly Rust
inkwell = { version = "0.7.1", features = ["llvm20-1"] }
